# earnings-event-playbook

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  release_manifest.json
demo/: coldstart-audit.json  coldstart-audit.md  events.json  evidence-ledger.json  evidence-ledger.md  handoff.json  handoff.md  index.html  portfolio.json  scenario-notebook.json  scenario-notebook.md  showcase.html  showcase.json  tutorial-bundle.json  tutorial-bundle.md  visual-receipt.json  visual-receipt.md
demo/cases/retail/: playbook.json  playbook.md
demo/cases/semiconductor/: playbook.json  playbook.md  post-event-compare.json  post-event-compare.md
demo/cases/software/: playbook.json  playbook.md  post-event-compare.json  post-event-compare.md
demo/review-packet/: fixture-gallery.json  fixture-gallery.md  handoff.json  handoff.md  playbook.json  playbook.md  portfolio-drift-bridge.json  portfolio-drift-bridge.md  post-event-compare.json  post-event-compare.md  review-packet-manifest.json  scenario-notebook.json  scenario-notebook.md  showcase.html  tutorial-bundle.json  tutorial-bundle.md  visual-receipt.json  visual-receipt.md
docs/: coldstart-audit.md  evidence-ledger.md  promote.md  release-readiness.md  review-packet.md  showcase.md  tutorial-software-case.md  usage.md
examples/: actuals.json
src/earnings_event_playbook/: __init__.py  cli.py  core.py  io.py  models.py  render.py
tests/: __init__.py  test_cli.py  test_parsing.py  test_public_hygiene.py  test_rendering.py  test_scoring.py  test_unittest_smoke.py
(+10 files in other folders)
