[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "earnings-event-playbook"
version = "0.4.0"
description = "Zero-dependency CLI for building local earnings event playbooks from static fixtures."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Project contributors"}]
keywords = ["earnings", "finance", "cli", "research", "playbook"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Office/Business :: Financial",
]
dependencies = []

[project.scripts]
earnings-event-playbook = "earnings_event_playbook.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
